--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Bookline</string>
+    <string name="FOOD">Looking For A restaurant</string>
+    <string name="search">Search</string>
+    <string name="menu">Menu</string>
+    <string name="profile">Profile</string>
+    <string name="hi">Hi! User</string>
+    <string name="welcome">Welcome</string>
+    <string name="my_ticket">My tickets</string>
+    <string name="my_credit_card">My credit cards</string>
+    <string name="history">History</string>
+    <string name="change_city">Changes city</string>
+    <string name="about_us">About us</string>
+    <string name="logout">Logout</string>
 </resources>
