--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="reco">recommended</string>
     <string name="search">Search</string>
     <string name="menu">Restaurant</string>
+    <string name="clinic">BOOK Your Clinic</string>
     <string name="profile">Profile</string>
     <string name="hi">Hi! User</string>
     <string name="welcome">Welcome</string>
